Squash a few warnings.